[package]
name = "tachyoo"
version = "0.1.0"
edition = "2024"

[features]
default=["dev"]
dev=["tokio_console", "snafu/backtrace"]
# RUSTFLAGS="--cfg tokio_unstable" needed!
tokio_console=["dep:console-subscriber"]

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features=["full"]}

tachyoo_protocol= { path="../tachyoo_protocol"}
tachyoo_world={path="../tachyoo_world"}
rustc-hash.workspace = true


console-subscriber= { workspace = true, optional=true} 
snafu.workspace=true
tracing.workspace=true
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
