[package]
name = "tachyoo_cli"
version = "0.1.0"
edition = "2024"

# TODO: pass through tachyoo features

[features]
tokio-console=[]
packet_viewer=["tachyoo/packet_viewer", "dep:flume"]
dev=["packet_viewer", "tachyoo/dev"]
default=["dev"]

[dependencies]
tachyoo={ path="../tachyoo" }
tachyoo_packet_viewer= { path="../tachyoo_packet_viewer" }

snafu.workspace=true
clap = { version = "4.6.1", features = ["derive"] }
flume = { workspace = true, optional = true }
