[package]
name = "tachyoo_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bitflags = "2.12.1"
bytes = "1.11.1"
either = "1.16.0"
flate2 = "1.1.9"
leb128 = "0.2.6"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
variadics_please = "2.0.0"
