[package]
name = "tachyoo_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags.workspace = true
bytes.workspace = true
either.workspace = true
flate2.workspace = true
leb128.workspace = true
pollster.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "full" ] }
tracing.workspace = true
variadics_please.workspace = true
